--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.sothree.slidinguppanel:library:3.2.1'
 }
