Search activity basic funcionallity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-feature android:name="android.hardware.screen.portrait" />
 
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -21,7 +21,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCcwMBsRjVEwrvCxXDJ90lfJUm0askpA24" />
+            android:value="AIzaSyD5lSUj_6jmw6PsRmIhw4yGckP_cTOQNaw" />
 
         <activity
             android:name=".HomeScreen"
@@ -34,6 +34,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SearchScreen"
+            android:label="@string/title_activity_search_screen"
+            android:theme="@style/MyMaterialTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
