--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SearchScreen"
+            android:label="@string/title_activity_search_screen"
+            android:theme="@style/MyMaterialTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
